# giraycoskun.com

./: .gitignore  AGENTS.md  README.md  astro.config.mjs  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  release.yml  update-cv.yml
docs/: CNAME  index.md
docs/assets/css/: custom.css
docs/assets/javascripts/: extra.js
docs/blog/: .authors.yml  index.md
docs/blog/posts/: 2024-wrapped.md  verona.md
docs/diary/: beer-diary.md  hiking-diary.md  index.md  wine-diary.md
docs/projects/: library.md
public/: hardcover-widget.js  robots.txt
src/: App.tsx
src/components/: BlogPost.tsx  BlogPostCard.astro  BlogPostCard.tsx  CopyButton.astro  Footer.astro  Footer.tsx  GalleryGrid.astro  Header.astro  Header.tsx  HikeCard.astro  ImageLightbox.astro  ProfileCard.astro  ProfileCard.tsx  StatCard.astro
src/content/: config.ts
src/content/blog/: alpine-beginner-notes.md  develop-server-landing-page.md  f1-board.md  hiking-gear.md  home-server.md  (+4 more)
src/data/: gallery.ts  gallery.tsx  hikes.ts  hikes.tsx  posts.tsx  types.ts  types.tsx
src/layouts/: Layout.astro
src/pages/: 404.astro  404.tsx  BlogIndex.tsx  BlogPost.tsx  Gallery.tsx  Hikes.tsx  Home.tsx  Library.tsx  Projects.tsx  Work.tsx  blog-index.astro  gallery.astro  hikes.astro  index.astro  work.astro
src/posts/: alpine-beginner.tsx  develop-server-page.tsx  hiking-gear.tsx  schellschlicht-trail-notes.tsx
src/styles/: global.css
src/util/: blogUtil.ts
src/utils/: blogUtil.ts  hikeUtil.ts
(+16 files in other folders)
