[tool.poetry]
name = "giraycoskun-com"
version = "0.1.0"
description = "Personal Website"
authors = ["giraycoskun.dev <giraycoskun.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.giraycoskun.com/"
repository = "https://github.com/giraycoskun/giraycoskun.com"
keywords = ["personal", "mkdocs-material", "website"]
packages = []


[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.6"
mkdocs-macros-plugin = "^1.0.5"


[tool.poe.tasks]
serve = "mkdocs serve -a localhost:8001"
export = "poetry export -f requirements.txt --output requirements.txt"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
