[project]
name = "giraycoskun-com"
version = "0.1.0"
description = "Personal Website"
authors = [{ name = "giraycoskun.dev", email = "giraycoskun.dev@gmail.com" }]
readme = "README.md"
license = "MIT"
keywords = [
    "personal",
    "mkdocs-material",
    "website",
]
dependencies = [
    "mkdocs-material>=9.5.6,<10",
    "mkdocs-macros-plugin>=1.0.5,<2",
]
requires-python = ">=3.13,<4"
[project.urls]
Homepage = "https://www.giraycoskun.com/"
Repository = "https://github.com/giraycoskun/giraycoskun.com"

[tool.poe.tasks]
serve = "mkdocs serve -a localhost:8001"
export = "poetry export -f requirements.txt --output requirements.txt"
